feat: Add AI-powered Email Master tool
Integrates the Google Gemini API to provide AI-driven assistance for email HTML tasks. This includes functionality for optimizing, fixing, decoding, and validating email content.

Introduces the `@google/genai` and `@monaco-editor/react` dependencies.

Adds a new `EmailMasterTool` component and integrates it into the application's navigation and home screen.
Also adds a new `EmailMasterAction` type for AI-related operations.

--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -10,7 +11,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800;900&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css" integrity="sha256-p4NxAoJBhIIN+hmNHrzRCf9tD/miZyoHS5obTRR9BMY=" crossorigin=""/>
   <style>
-    body { font-family: 'Inter', sans-serif; transition: background-color 0.3s ease; margin: 0; }
+    body { font-family: 'Inter', sans-serif; transition: background-color 0.3s ease; margin: 0; overflow-x: hidden; }
     ::-webkit-scrollbar { width: 8px; }
     ::-webkit-scrollbar-track { background: transparent; }
     ::-webkit-scrollbar-thumb { background: rgba(99, 102, 241, 0.2); border-radius: 4px; }
@@ -40,7 +41,9 @@
     "react-dom/": "https://esm.sh/react-dom@^19.2.3/",
     "react-dom/client": "https://esm.sh/react-dom@^19.2.3/client",
     "lucide-react": "https://esm.sh/lucide-react@^0.562.0",
-    "leaflet": "https://esm.sh/leaflet@1.9.4"
+    "leaflet": "https://esm.sh/leaflet@1.9.4",
+    "@google/genai": "https://esm.sh/@google/genai@^1.34.0",
+    "@monaco-editor/react": "https://esm.sh/@monaco-editor/react@4.7.0"
   }
 }
 </script>
