feat: Improve editor usability and add favicon
Enhance the user experience within the Monaco Editor by ensuring that find widgets and other popups are always visible and interactive. This includes addressing potential z-index and overflow issues.

Additionally, a favicon has been added to the application for better branding and tab identification.

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Authenticator Pro - Bulk Domain Intelligence</title>
+  <link rel="icon" href="data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'><text x='50%25' y='55%25' dominant-baseline='central' text-anchor='middle' font-family='Inter, sans-serif' font-weight='900' font-size='90' fill='%23ef4444'>A</text></svg>">
   <script src="https://cdn.tailwindcss.com"></script>
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -31,6 +32,30 @@
       content: attr(data-placeholder);
       color: rgba(148, 163, 184, 0.5);
       font-style: italic;
+    }
+
+    /* GLOBAL FIX FOR MONACO EDITOR WIDGETS */
+    /* This ensures that Find/Replace and other popups are never blocked by z-index or overflow */
+    .monaco-editor .editor-widget {
+      z-index: 9999 !important;
+      pointer-events: auto !important;
+      visibility: visible !important;
+    }
+    
+    .monaco-editor .find-widget {
+      z-index: 10000 !important;
+      pointer-events: auto !important;
+      user-select: text !important;
+    }
+
+    .monaco-editor .find-widget .button {
+      cursor: pointer !important;
+      pointer-events: auto !important;
+    }
+
+    .monaco-editor .find-widget input {
+      pointer-events: auto !important;
+      cursor: text !important;
     }
   </style>
 <script type="importmap">
