--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -35,7 +34,6 @@
     }
 
     /* GLOBAL FIX FOR MONACO EDITOR WIDGETS */
-    /* This ensures that Find/Replace and other popups are never blocked by z-index or overflow */
     .monaco-editor .editor-widget {
       z-index: 9999 !important;
       pointer-events: auto !important;
@@ -56,6 +54,15 @@
     .monaco-editor .find-widget input {
       pointer-events: auto !important;
       cursor: text !important;
+    }
+
+    /* Notification Animations */
+    @keyframes slideInRight {
+      from { transform: translateX(100%); opacity: 0; }
+      to { transform: translateX(0); opacity: 1; }
+    }
+    .animate-notification {
+      animation: slideInRight 0.3s cubic-bezier(0.16, 1, 0.3, 1);
     }
   </style>
 <script type="importmap">
