--- a/index.html
+++ b/index.html
@@ -74,8 +74,8 @@
     "react-dom/client": "https://esm.sh/react-dom@^19.2.3/client",
     "lucide-react": "https://esm.sh/lucide-react@^0.562.0",
     "leaflet": "https://esm.sh/leaflet@1.9.4",
-    "@google/genai": "https://esm.sh/@google/genai@^1.34.0",
-    "@monaco-editor/react": "https://esm.sh/@monaco-editor/react@4.7.0"
+    "@monaco-editor/react": "https://esm.sh/@monaco-editor/react@4.7.0",
+    "@google/genai": "https://esm.sh/@google/genai@^1.34.0"
   }
 }
 </script>
